Development Version
===================

* Format SQL statement at cursor (Alt+F).


Version 0.1.0 (2015-01-31)
==========================

* Initial version.